Fix IndividualPlan carousel item visibility logic

--- a/Site/Content/site.less
+++ b/Site/Content/site.less
@@ -36,6 +36,10 @@ a {
     cursor: pointer;
 }
 
+.popover.left {
+    padding-bottom: 15px;
+}
+
 .page-header {
     margin-top: 0 !important;
 }
